gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail19912a.d
version https://git-lfs.github.com/spec/v1
oid sha256:c2ad7d3d782deeaff6b7ce49e59c21066f2ab9e1e729c11b808d0efee13ba4aa
size 209
